# weise

./: Cargo.toml  checklist.txt  global.txt  kademlia.txt  next_target.txt  plan.txt
src/: garlic.rs  lib.rs  main.rs
