[package]
name = "weise"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "quic", "noise", "yamux", "kad", "identify", "macros", "tokio", "ping", "gossipsub"] }
# Змінюємо "io-stdin" на "io-std"
tokio = { version = "1.0", features = ["full"] } 
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"